# klondikebattle

./: CMakeLists.txt  README.md  dealer.cpp  dealer.h  klondikebattle.kcfg  klondikebattleui.rc  main.cpp  mainwindow.cpp  mainwindow.h  org.kde.klondikebattle.desktop  patpile.cpp  patpile.h  pileutils.cpp  pileutils.h  player.cpp  player.h  players.ui  russianbank.cpp  russianbank.h  settings.kcfgc  version.h
doc/: index.docbook
libkcardgame/: CMakeLists.txt  kcard.cpp  kcarddeck.cpp  kcarddeck.h
previews/: CMakeLists.txt
sounds/: CMakeLists.txt
themes/: CMakeLists.txt  klondikebattle.knsrc
